RESOLVED FIXED201701
Log timeoutValue passed on to CFNetwork
https://bugs.webkit.org/show_bug.cgi?id=201701
Summary Log timeoutValue passed on to CFNetwork
Keith Rollin
Reported 2019-09-11 15:37:35 PDT
We occasionally see cases where resource-loads into CFNetwork take a long time. Rather than timing out after the default of 60s, they stay pending for many minutes. To better understand why this is happening, log the timeoutValue we pass to CFNetwork when loading resources.
Attachments
Patch (3.81 KB, patch)
2019-09-11 15:40 PDT, Keith Rollin
no flags
Radar WebKit Bug Importer
Comment 1 2019-09-11 15:37:49 PDT
Keith Rollin
Comment 2 2019-09-11 15:40:47 PDT
WebKit Commit Bot
Comment 3 2019-09-11 22:40:19 PDT
Comment on attachment 378584 [details] Patch Clearing flags on attachment: 378584 Committed r249795: <https://trac.webkit.org/changeset/249795>
WebKit Commit Bot
Comment 4 2019-09-11 22:40:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.