Log timeoutValue passed on to CFNetwork https://bugs.webkit.org/show_bug.cgi?id=201701 <rdar://problem/55279683>

Reviewed by Chris Dumez.

Source/WebCore:

Export ResourceRequest::timeoutValue for use in WebKit.

No new tests -- no new or changed functionality.

* platform/network/ResourceRequestBase.h:

Source/WebKit:

We occasionally see cases where resource-loads into CFNetwork take a
long time. Rather than timing out after the default of 60s, they stay
pending for many minutes. To better understand why this is happening,
log the timeoutValue we pass to CFNetwork when loading resources.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::startNetworkLoad):


Canonical link: https://commits.webkit.org/215351@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249795 268f45cc-cd09-0410-ab3c-d52691b4dbfc